Fixed the menu link sizes on tablet sizes

--- a/css/main.css
+++ b/css/main.css
@@ -376,6 +376,7 @@ input[type=submit]:hover {
 	}
 	.main-nav a {
 		color: #3acec2;
+		padding: 10px 4px;
 	}
 	.top-img {
 		height: 710px;
